fixed navbar spacing and restyled buttons

--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,11 @@
 .flex-container {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 25px;
+  margin-top: 5px;
+}
+
+.flex-item {
+  padding: 20px;
 }
 
 header {
@@ -97,6 +101,22 @@ h4 {
   font-weight: 300;
   font-size: 24px;
   color: #727272;
+}
+
+h5 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  text-transform: lowercase;
+  color: #000000;
+}
+
+h6 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  text-transform: lowercase;
+  color: #000000;
 }
 
 p {
